# tango-jglue-benchmarks

./: .gitignore  README.md  pyproject.toml
configs/jcommonsenseqa/: base.libsonnet  luke_japanese_base_lite.jsonnet  tohoku_bert_base.jsonnet  tohoku_bert_base_char.jsonnet
configs/jnli/: base.libsonnet  line_distilbert_base_japanese.jsonnet  luke_japanese_base_lite.jsonnet  nict_bert_base.jsonnet  tohoku_bert_base.jsonnet  tohoku_bert_base_char.jsonnet  tohoku_bert_large.jsonnet  waseda_roberta_base.jsonnet  waseda_roberta_large_s128.jsonnet  waseda_roberta_large_s512.jsonnet  xlm_roberta_base.jsonnet  xlm_roberta_large.jsonnet
configs/jsquad/: tohoku_bert_base.jsonnet
configs/jsts/: base.libsonnet  tohoku_bert_base.jsonnet
configs/marc_ja/: base.libsonnet  luke_japanese_base_lite.jsonnet  tohoku_bert_base.jsonnet  tohoku_bert_base_char.jsonnet
jglue/integrations/torch/: train_callback.py
jglue/integrations/transformers/: data_collator.py  model.py
jglue/steps/: apply_morphological_analysis.py  tokenize_glue.py  tokenize_squad.py  tokenize_swag.py
scripts/: download_nict_bert.sh  install_jumanpp.sh
