[tool.poetry]
name = "tango-jglue-benchmarks"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{include = "jglue"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ai2-tango = {extras = ["all"], version = "^1.2.0"}
torch = "1.12.1"
fugashi = "^1.2.1"
unidic-lite = "^1.0.8"
evaluate = "^0.4.0"
scikit-learn = "^1.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pytest = "^7.2.1"

[[tool.poetry.source]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
